--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
     background-color: #fff;
 }
 
+
+md-dialog.fullscreen-dialog {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+}
+
 .login md-card {
     width: 400px;
 }
