--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     background-color: #fff;
 }
 
+md-input-container {
+    margin: 0;
+}
 
 md-dialog.fullscreen-dialog {
     max-width: 100%;
@@ -23,13 +26,13 @@ md-dialog.fullscreen-dialog {
 
 md-whiteframe {
     background: #fff;
-    margin: 10px;
+    margin: 3px;
     height: 100px;
 }
 
 @media (max-width: 599px) {
     md-whiteframe {
-        margin: 7px;
+        margin: 3px;
         height: 50px;
         background-color: #c8e4fa;
     }
@@ -40,7 +43,7 @@ md-whiteframe {
 
 @media (min-width: 600px) and (max-width: 959px) {
     md-whiteframe {
-        margin: 20px;
+        margin: 3px;
         height: 75px;
     }
     md-whiteframe>span {
@@ -50,7 +53,7 @@ md-whiteframe {
 
 @media (min-width: 960px) and (max-width: 1279px) {
     md-whiteframe {
-        margin: 10px;
+        margin: 3px;
         height: 100px;
         background-color: #F2FCE2;
         position: relative;
@@ -68,7 +71,7 @@ md-whiteframe {
 
 @media (min-width: 1280px) {
     md-whiteframe {
-        margin: 10px;
+        margin: 3px;
         height: 100px;
         background-color: #F2FCE2;
         position: relative;
@@ -84,3 +87,7 @@ md-whiteframe {
     }
 
 }
+
+
+
+
